# bodiless-browser

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  release.yml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
